2007-12-06 [colin]	3.1.0cvs62

	* src/account.c
	* src/imap.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Disable connection via command line on WIN32
		Disable mmap use on WIN32 - use normal strings
	* src/addressbook.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressbook_foldersel.h
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Fix leak, rework function logics to be more
		natural - thanks to Holger
	* src/common/utils.c
		Fix warnings

2007-12-06 [colin]	3.1.0cvs61

	* src/news.c
	* src/common/utils.c
	* src/common/utils.h
		Fix posting, and fix UTF-8 being sent when encoding
		is 8bit

2007-12-05 [colin]	3.1.0cvs60

	* src/news.c
		Fix debian bug #453157, 'Fails to post usenet
		articles after NNTP connection has been 
		interrupted". Fix return value to prevent deletion
		on failure, and issue MODE READER in case posting
		fails at first.

2007-12-05 [colin]	3.1.0cvs59

	* src/messageview.c
	* src/uri_opener.c
		Improvements to the List URIs dialog
		Patch by Pawel

2007-12-05 [colin]	3.1.0cvs58

	* src/prefs_other.c
	* src/gtk/gtksctree.h
		Fix warnings

2007-12-04 [colin]	3.1.0cvs57

	* src/etpan/imap-thread.c
		Fix bug 1378, 'Claws exits on IMAP alert message'
		Don't do GTK calls directly from Etpan thread

2007-12-04 [colin]	3.1.0cvs56

	* src/folderview.c
	* src/gtk/gtksctree.c
		MAEMO: Fix bug 1325, 'Folder Navigation Problems'
                Make all the left of column zero an hotspot for
                expanding.

2007-12-04 [colin]	3.1.0cvs55

	* src/mainwindow.c
	* src/mainwindow.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_receive.c
		MAEMO: Fix bug 1199, 'Tie into LED for new mail alert'

2007-12-04 [wwp]	3.1.0cvs54

	* src/prefs_other.c
		Fix for bug #1419.

2007-12-04 [holger]	3.1.0cvs53

	* src/addrduplicates.c