@@ -3120,3 +3120,4 @@
 ( cvs diff -u -r 1.101.2.47 -r 1.101.2.48 src/news.c;  ) > 3.1.0cvs60.patchset
 ( cvs diff -u -r 1.101.2.48 -r 1.101.2.49 src/news.c;  cvs diff -u -r 1.36.2.127 -r 1.36.2.128 src/common/utils.c;  cvs diff -u -r 1.20.2.56 -r 1.20.2.57 src/common/utils.h;  ) > 3.1.0cvs61.patchset
 ( cvs diff -u -r 1.61.2.76 -r 1.61.2.77 src/account.c;  cvs diff -u -r 1.60.2.110 -r 1.60.2.111 src/addressbook.c;  cvs diff -u -r 1.18.2.12 -r 1.18.2.13 src/addressbook.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/addressbook_foldersel.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/addressbook_foldersel.h;  cvs diff -u -r 1.179.2.203 -r 1.179.2.204 src/imap.c;  cvs diff -u -r 1.105.2.118 -r 1.105.2.119 src/prefs_account.c;  cvs diff -u -r 1.49.2.35 -r 1.49.2.36 src/prefs_account.h;  cvs diff -u -r 1.1.4.44 -r 1.1.4.45 src/prefs_filtering_action.c;  cvs diff -u -r 1.43.2.66 -r 1.43.2.67 src/prefs_matcher.c;  cvs diff -u -r 1.36.2.128 -r 1.36.2.129 src/common/utils.c;  cvs diff -u -r 1.1.4.92 -r 1.1.4.93 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.4.21 -r 1.1.4.22 src/etpan/imap-thread.h;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/plugins/bogofilter/bogofilter_gtk.c;  cvs diff -u -r 1.5.2.20 -r 1.5.2.21 src/plugins/dillo_viewer/dillo_prefs.c;  cvs diff -u -r 1.23.2.45 -r 1.23.2.46 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 3.1.0cvs62.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/common/w32_time.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/common/w32lib.h;  cvs diff -u -r 1.1.4.9 -r 1.1.4.10 src/etpan/etpan-thread-manager.c;  cvs diff -u -r 1.1.4.93 -r 1.1.4.94 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/etpan/nntp-thread.c;  cvs diff -u -r 1.20.2.15 -r 1.20.2.16 src/gtk/Makefile.am;  ) > 3.1.0cvs63.patchset
