@@ -24,6 +24,7 @@
 
 #include "w32lib.h"
 
+#if ! defined (__MINGW32__) || MINGW32_VERSION < 312
 int gettimeofday( struct timeval *tv, struct timezone *tz ){
   struct _timeb tstruct;
   _ftime( &tstruct );
@@ -31,3 +32,4 @@ int gettimeofday( struct timeval *tv, struct timezone *tz ){
   tv->tv_usec = tstruct.millitm;
   return 1;
 }
+#endif
